charts/kube-prometheus-stack/ingresss.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: kong
    ingress.kubernetes.io/rewrite-target: / 
spec:
  rules: 
    - #host: worldcereal.csgroup.space
      http:
        paths:
          - path: /grafana
            backend:
              serviceName: kube-prometheus-stack-grafana  
              servicePort: 80  
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
  annotations:
    kubernetes.io/ingress.class: kong
    ingress.kubernetes.io/rewrite-target: / 
spec:
  rules: 
    - #host: worldcereal.csgroup.space
      http:
        paths:
          - path: /prometheus
            backend:
              serviceName: kube-prometheus-stack-prometheus 
              servicePort: 9090
