charts/kube-prometheus-stack/prometheus-stack-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules: 
    - http:
        paths:
          - path: /prometheus
            backend:
              serviceName: kube-prometheus-stack-prometheus
              servicePort: 9090
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules: 
    - http:
        paths:
          - path: /grafana
            backend:
              serviceName: kube-prometheus-stack-grafana 
              servicePort: 80
